<resources>
    <string name="app_name">HomieApp</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="devicename">name of device:</string>
    <string name="values">current value:</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_connect">Connect</string>
    <string name="hostAddress">Host-Adresse:</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_device_detail">DeviceDetailActivity</string>
    <string name="getBack">return</string>
    <string name="getCurrentState">Get current State</string>
    <string name="toggleState">Toggle State</string>
    <string name="currConnectedDevices">Currently Connected Devices</string>
    <string name="deviceDetails">Device details</string>
    <string name="stateOff">off</string>
    <string name="stateOn">on</string>
</resources>
